--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,69 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
+body {
+  font-size: 1.2rem;
+  font-family: Ubuntu, sans-serif;
+  background: #FFB997;
+  color: #0B032D;
+  height: 110vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .App {
+
+  background-color: #d0a3a3;
+  background-color: #F67E7D;
+  padding-top: .5em;
+  min-width: 50vw;
+
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px 1px rgb(60, 58, 58);
+}
+
+input[type="text"] {
+  border: none;
+  border-bottom: 2px solid #0B032D;
+  background: inherit;
+
+}
+
+input[type="text"]:focus {
+  outline: none;
+
+}
+
+form button {
+  opacity: 0.9;
+  transition: opacity 300ms ease-in-out;
+}
+
+
+form button:hover {
+  /* background: #0b032d43; */
+  color: aliceblue;
+  opacity: 1;
+
+}
+
+.task * {
+  cursor: pointer;
+}
+
+
+.socials * {
+  font-size: 1.5rem;
+}
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +100,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
